--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/details/details"
   ],
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "松鼠笔记",
     "navigationBarTextStyle":"black"
-  }
+  },
+  "debug": true
 }
