--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/details/details"
+    "pages/details/details",
+    "pages/tasks/tasks"
   ],
   "window":{
     "backgroundTextStyle":"light",
